Changes in Section

--- a/Paper/draft.tex
+++ b/Paper/draft.tex
@@ -37,15 +37,14 @@ ABC Institute, Rupert-Karls-University Heidelberg, Heidelberg, Germany\\
 %
 \maketitle              % typeset the header of the contribution
 %
-\begin{abstract}
-The abstract should briefly summarize the contents of the paper in
-150--250 words.
-
-\keywords{First keyword  \and Second keyword \and Another keyword.}
-\end{abstract}
+\input Sections/0abstract
 
 
 \input Sections/1Introduction
+\input Sections/Background_and_ReatedWork
+\input Sections/ProposedArchitecture
+\input Sections/ReslutsAndDiscussion
+\input Sections/ConclusionAndFutureWork
 
 
 \bibliographystyle{splncs04}
