--- a/Paper/reference.bib
+++ b/Paper/reference.bib
@@ -1,8 +1,8 @@
 % Encoding: UTF-8
 
 @InProceedings{vipin2019,
-  author    = {K Vipin},
-  title     = {My Paper},
+  author    = {K. Vipin},
+  title     = {My paper},
   booktitle = {Name of Conference},
   year      = {2019},
 }
