--- a/Paper/Sections/Background_and_ReatedWork.tex
+++ b/Paper/Sections/Background_and_ReatedWork.tex
@@ -13,7 +13,12 @@ In order to solve the timing isuse, the architecture Multiengines BLASTn [*7] is
 //
 There is another method based on systolic array that does not construct tables. Needleman-Wunsch algorithm [*10] and dynamic programming algorithm that apply systolic array was implemented on SPLASH2 by D. Hoang et. al. [*11], [*12]. Another algorithm that uses systolic array called Smith Waterman matching algorithm was implemented by S. Guccione et. al. [*13], also at Virginia Tech [*14] and Nanyang Techological University [*15]. 
 
-
+\begin{figure}
+\includegraphics[width=\textwidth]{Figures/BlastMachine.pdf}
+\caption{A figure caption is always placed below the illustration.
+Please note that short captions are centered, while long ones are
+justified by the macro package automatically.} \label{fig1}
+\end{figure}
 
 
 In paper \cite{vipin2019}
