Intro and Blast Algorithm description

--- a/Paper/draft.tex
+++ b/Paper/draft.tex
@@ -42,6 +42,7 @@ ABC Institute, Rupert-Karls-University Heidelberg, Heidelberg, Germany\\
 
 \input Sections/1Introduction
 \input Sections/Background_and_ReatedWork
+\input Sections/BlastAlgorithm
 \input Sections/ProposedArchitecture
 \input Sections/ReslutsAndDiscussion
 \input Sections/ConclusionAndFutureWork
