updating draft section

--- a/Paper/reference.bib
+++ b/Paper/reference.bib
@@ -16,18 +16,20 @@
   volume  = {16},
   number  = {3},
 }
+
 @InProceedings{sarkar2010hardware,
   author       = {Sarkar, Souradip and Majumder, Turbo and Kalyanaraman, Ananth and Pande, Partha Pratim},
   title        = {Hardware accelerators for biocomputing: A survey},
-  booktitle    = {Circuits and Systems (ISCAS), Proceedings of 2010 IEEE International Symposium on},
+  booktitle    = {Proceedings of IEEE International Symposium on Circuits and Systems (ISCAS)},
   year         = {2010},
   pages        = {3789--3792},
   organization = {IEEE},
 }
+
 @InProceedings{oliver2005hyper,
   author       = {Oliver, Tim and Schmidt, Bertil and Maskell, Douglas},
-  title        = {Hyper customized processors for bio-sequence database scanning on FPGAs},
-  booktitle    = {Proceedings of the 2005 ACM/SIGDA 13th international symposium on Field-programmable gate arrays},
+  title        = {Hyper customized processors for bio-sequence database scanning on {FPGAs}},
+  booktitle    = {Proceedings of the {ACM/SIGDA} international symposium on Field-programmable gate arrays},
   year         = {2005},
   pages        = {229--237},
   organization = {ACM},
@@ -106,6 +108,5 @@
   pages        = {375--384},
   organization = {Springer},
 }
-
 
 @Comment{jabref-meta: databaseType:bibtex;}
