Added Introduction and Blast algorithm explanation

--- a/Paper/Sections/1Introduction.tex
+++ b/Paper/Sections/1Introduction.tex
@@ -1,19 +1,14 @@
 \section{Introduction}
 \label{sec:introduction}
-
-
-Biological sequence alignment search algorithms are widely used in Bioinformatics and Computational biology(BCB), where the match of sequences of database and query is searched[Server Kasap]. The main reason in using such search algorithms is to identify the degree of similarity of a newly discovered biological sequence with the already know sequences[[Server Kasap gapped]. For instance, it can be exploited to determine early disease diagnosis, where biological information of a newly discovered sequence can be obtained by finding the most similar disease gene in the database[Xinyu Guo].
-
-
-Basic Local Alignment Search Tool(BLAST) is one of the widely used heuristic methodologies, which delivers the best local alignment for even large size of data sets. Although, BLAST has been proved to meet the performance and search sensitivity criteria, the improvements in DNA sequencing technologies, which imply the number of genomic sequences is doubling almost every year, display that even algorithms like BLAST cannot tackle the requirements[TimeLogic]. 
-
-
-Due to the complexity of sequence alignment when dealing with the huge amount of data, currently used platforms cannot satisfy the computational requirements[Masato Yoshimi,]. The usage of Field Programmable Gate Arrays(FPGAs) has been recently proposed as an effective solution to meet the performance requirements. 
-
-
-Biological sequence alignment is the major task in the bioinformatics, where newly discovered genome sequence is compared with whole database in order to get information about it. It is performed by aligning query sequence to each subject sequence in a database and comparing them to find matchings \cite{guo2012systolic}.
+Biological sequence alignment search algorithms are widely used in Bioinformatics and Computational biology(BCB), where the match of DNA sequences is searched \cite{kasap2008design}. The main reason in using such search algorithms is to identify the degree of similarity of a newly discovered biological sequence with already known sequences \cite{kasap2008design}. By exploiting those algorithms it would be possible to determine early disease diagnosis, where biological information of a newly discovered sequence is obtained by matching it with the most similar disease gene in the database \cite{guo2012systolic}. However, sequence alignment algorithms require powerful computational units to operate \cite{datta2009}. For this reason, using desktop computers to perform search operation is usually inefficient and unacceptable in terms of computational power and speed \cite{masato2016}.  
 \\
-Although there are several algorithms developed (e.g. Needleman-Wunsch, Smith-Waterman), this paper concentrates on Basic Local Alignment Search Tool (BLAST), since it is widely used algorithm in sequence alignment. The reason why it is widely utilize is that the algorithm is much faster compared to dynamic alignments \cite{kasap2008design}. However, the implementation of the tool in a general purposed computers is causing major timing and computational issues with exponentially growing of DNA databases. For instance, it may take several hours to compare hundreds of sequence in a database on general purposed computers. Thus, it may cause significant bottleneck when it comes to database with millions of bio-sequences \cite{sarkar2010hardware}.
+
+The usage of Field Programmable Gate Arrays(FPGAs) has been recently proposed as an effective solution to meet the hardware performance requirements \cite{kasap2008design}. There are several reasons behind the success of FPGA in such a computaional intensive operations. First of all, the flexibility of FPGA architecture enables to allocate highly efficient operations in the narrow bit-width data to define the long DNA sequences, in contrast to fixed register size of traditional processors \cite{cug2007}. Secondly, power consumption is significantly lower in FPGAs in contrast to CPUs, with the difference of approximately 4 times \cite{cug2007}. Moreover, reprogrammability of FPGAs to fit the certain accelerated algorithm also reduces the power consumption. Another advantage of using FPGAs instead of other acceleration techniques is its being widely exploited and developed for several years, as well as its availability in the market \cite{cug2007}. 
 \\
-In order to deal with timing issue, the algorithm must be implemented on hardware accelerator platforms. Higher computational efficiency can be achieved by using Field Programmable Gate Arrays (FPGAs) since it enables parallel computation and can be reprogrammed. In this paper we propose a design of an architecture for efficient implementation of BLAST algorithm on FPGA and discuss its resource consumption and timing analysis by using results obtained during synthesizing, functional, and timing simulations. 
+
+The efficiency of search algorithm is essential, and probably even more important than the hardware it is run on. There are various biological sequence alignment techniques developed over the past decades\cite{mohd2013}. Basic Local Alignment Search Tool(BLAST) is one of the widely used heuristic methodologies, which delivers the best local alignment for even large size of data sets. Due to its heuristic nature, BLAST is much faster than dynamic programming algorithms such as Needleman-Wunsch and Smith-Waterman algorithms \cite{wien2011blastp}. Although, BLAST has been proved to meet the performance and search sensitivity criteria, the improvements in DNA sequencing technologies rises new challenges for BLAST. Statistics imply that the number of genomic sequences is doubling almost every year, and as a consequence, even algorithms like BLAST cannot remain efficient to meet new requirements \cite{wien2011blastp}. 
+\\
+
+\todo[inline]{add what this paper proposes}
+
 
