--- a/Paper/reference.bib
+++ b/Paper/reference.bib
@@ -66,7 +66,8 @@
   pages        = {217--226},
   organization = {IEEE},
 }
-@InProceedings{,
+
+@InProceedings{datta2009,
   author       = {Datta, Siddhartha and Beeraka, Parag and Sass, Ron},
   title        = {RC-BLASTn: Implementation and evaluation of the BLASTn scan function},
   booktitle    = {Field Programmable Custom Computing Machines, 2009. FCCM'09. 17th IEEE Symposium on},
@@ -107,6 +108,34 @@
   year         = {2003},
   pages        = {375--384},
   organization = {Springer},
+}
+
+@Article{wien2011blastp,
+  author  = {Wienbrandt, Lars and Baumgart, Stefan and Bissel, Jost and Schatz, Florian and Schimmler, Manfred},
+  title   = {Massively parallel FPGA-based implementation of BLASTp with the two-hit method},
+  journal = {ELSEVIER},
+  year    = {2011},
+}
+
+@Article{cug2007,
+  author  = {Abelsson, Henrik and Sandberg, Goran and Mohl, Stefan},
+  title   = {Accelerating NCBI BLAST},
+  journal = {Cray User Group},
+  year    = {2007},
+}
+
+@Article{masato2016,
+  author  = {Yoshimi, Masato and Wu, Celimuge and Yoshinaga, Tsutomu},
+  title   = {Accelerating BLAST Computation on an FPGA-enhanced PC Cluster},
+  journal = {IEEE},
+  year    = {2016},
+}
+
+@MastersThesis{mohd2013,
+  author = {Mohd, Fikri Bin Che Husin},
+  title  = {Design and Implementation of FPGA-based DNA Sequence Alignmnet Accelerator},
+  school = {Universiti Tun Hussein Onn Malaysia},
+  year   = {2013},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
